--- a/readtheorg.css
+++ b/readtheorg.css
@@ -1105,9 +1105,9 @@ h2.footnotes{
 }
 
 .todo{
-    background-color: #f29f97;
+    background-color: #edf2e9;
     padding: 0px 4px;
-    color: #fff;
+    color: #e2772f;
 }
 
 .WAIT, .nilWAIT{
@@ -1115,9 +1115,9 @@ h2.footnotes{
 }
 
 .done{
-    background-color: #6ab0de;
+    background-color: #edf2e9;
     padding: 0px 4px;
-    color: #fff;
+    color: #42af43;
 }
 
 .tag span {
@@ -1145,6 +1145,7 @@ h2.footnotes{
     font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
     font-size: 90%;
     color: navy;
+    background-color: #edf2e9;
 }
 
 .nav .timestamp {
